# LUCID_Finance_WebApp

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_DASHBOARD.md  README.md  deploy_to_pi.sh  docker-compose.yml  pyproject.toml  pytest.ini  setup_ssh_key.sh  start_backend.sh  start_frontend.sh
backend/: __init__.py  migrate_add_subtype.py  test_backward_compatibility.py  test_bcv_extractor.py
backend/api/: __init__.py  auth.py  constants.py  dependencies.py  exceptions.py  main.py  schemas.py
backend/data_pipeline/: __init__.py  (+6 more)
dev_reference/: MASTER_BUDGET_LUCA.xlsx  budget_script_v1.py  filter_budget.py
docs/: ARCHITECTURE.md  AUTHENTICATION.md  CLOUDFLARE_TUNNEL.md  CSV_FORMATS_ANALYSIS.md  DASHBOARD_FIXES.md  DATABASE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_PI.md  MULTI_BANK_CSV_SUPPORT.md  PI_RESTART.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_ENV.md  PROJECT_STRUCTURE.md  QUICK_START_TECHNICAL.md  RASPBERRY_PI_SETUP.md  README.md  SD_CARD_OPTIMIZATION.md  UPDATE_PRODUCTION.md  USER_GUIDE.md  USER_ISOLATION_FIX.md  push-to-rasp.md
frontend/: index.html  package-lock.json  package.json
model/: README.md
mysql-config/: optimized.cnf
ops/: backup_database.sh  create_admin.py  initialize_categories.py  migrate_add_amount_conditions.py  migrate_add_user_isolation.py  restore_database.sh  transfer_database.sh
scripts/: create_admin.py  create_user.py  migrate_add_user_isolation.py  transfer_database.sh
tests/: README.md  test_amount_conditions.py  test_apply_rules.py  test_budgets.py  test_categorization_rules.py  test_enhancements.py
(+43 files in other folders)
